--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
-        <script src="https://cdn.bootcdn.net/ajax/libs/cesium/1.116.0/Cesium.js"></script>
+        <script defer src="https://cdn.bootcdn.net/ajax/libs/cesium/1.116.0/Cesium.js"></script>
         <script src="https://webapi.amap.com/maps?v=2.0&key=2cff6f14791d781a6cf0fd2fe540427d"></script>
         <link
             rel="stylesheet"
