--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
             href="https://cdn.bootcdn.net/ajax/libs/cesium/1.116.0/Widgets/widgets.css"
         />
         <!-- <script src="node_modules/cesium/Build/Cesium/Cesium.js"></script> -->
-        <title>Vite + Vue</title>
+        <title>可视化平台 - 阿亻</title>
     </head>
     <body>
         <div id="app"></div>
